# scanner-benchmarks

./: benchmark.py  cinematography_scale.py  cinematography_spawn_nodes.sh  decode.py  graph.py  graph_scale.py  panoptic_spawn_nodes.sh  profile.py  surround360_spawn_nodes.sh
comparison/: CMakeLists.txt
comparison/kernel_sol/: CMakeLists.txt
comparison/ocv_decode/: CMakeLists.txt  main.cpp
comparison/peak/: CMakeLists.txt  main.cpp  peak_cpu_video_decoder.cpp  peak_cpu_video_decoder.h  peak_gpu_video_decoder.cpp  peak_gpu_video_decoder.h  peak_video_decoder.cpp
comparison/readwrite/: CMakeLists.txt
comparison/standalone/: CMakeLists.txt  main.cpp  main.py
comparison/util/: CMakeLists.txt  net_descriptor.cpp  net_descriptor.h  queue.h  queue.inl  time.h
scale/: cinematography_shutdown_nodes.sh  cinematography_shutdown_nodes_gpu.sh  cinematography_spawn_nodes.sh  cinematography_spawn_nodes_gpu.sh  scale_job.py  sweep_jobs.py
